<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bckg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background_set"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/chooseGameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseMode"
        android:textSize="36sp"
        android:fontFamily="@font/fontofkindness"
        android:layout_marginBottom="450dp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/btnLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_marginBottom="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/classicGame"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_stroke"
            android:fontFamily="@font/fontofkindness"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/playClassic"
            android:textSize="28sp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/onlyTasks"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_stroke"
            android:fontFamily="@font/fontofkindness"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/playLogic"
            android:textSize="28sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/onlyTheory"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_stroke"
            android:fontFamily="@font/fontofkindness"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/readTheory"
            android:textSize="28sp"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="300dp"
        android:layout_height="228dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/man_thnk" />

</androidx.constraintlayout.widget.ConstraintLayout>