<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bckg_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background_set"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="46sp"
        android:fontFamily="@font/fontofkindness"
        android:layout_marginBottom="450dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/smbd_thnk"
        android:layout_width="158dp"
        android:layout_height="219dp"
        app:srcCompat="@drawable/smbd_thnk"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="250dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/start_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_marginBottom="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/changeMusic"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_stroke"
            android:fontFamily="@font/fontofkindness"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/changeMusic"
            android:textSize="28sp"
            android:onClick="changeMusic"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/changeBackground"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_stroke"
            android:fontFamily="@font/fontofkindness"
            android:layout_marginTop="40dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/changeBckg"
            android:textSize="28sp"
            app:layout_constraintTop_toBottomOf="@id/changeMusic"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>